// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`manifest codegen and content-hash caching > defaults AppContext to Record<string, unknown> when src/taser.ts does not exist 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp, type TaserDefinition } from "@taserjs/runtime";
import route_0 from "../routes/index.get.js";

export type LayoutTree = {

};

export const layoutManifest = {

} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    "/": {
      GET: {
        layouts: [],
        route: route_0,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;

export const app = createTaserApp(routeManifest);
export default app;
export const createApp = (overrideTaser?: TaserDefinition) =>
  createTaserApp(routeManifest, overrideTaser);

export type RoutePath = "/";

export type LayoutHierarchy = {

};

export type RouteByPathMethod = {
    "/": {
      GET: {
        layouts: readonly [];
      };
    };
};

export type AppContext = Record<string, unknown>;

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;

exports[`manifest codegen and content-hash caching > emits unified routes.gen.ts extracting AppContext from src/taser.ts and compiles inverted app 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp } from "@taserjs/runtime";
import taser from "../taser.js";
import layout_0 from "../routes/$.js";
import route_0 from "../routes/users.get.js";

export type LayoutTree = {
  "/*": typeof layout_0;
};

export const layoutManifest = {
    "/*": layout_0,
} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    "/users": {
      GET: {
        layouts: ["/*"],
        route: route_0,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;

export const app = createTaserApp(routeManifest, taser);
export default app;
export const createApp = (overrideTaser?: typeof taser) =>
  createTaserApp(routeManifest, overrideTaser ?? taser);

export type RoutePath = "/users";

export type LayoutHierarchy = {
  "/*": readonly [];
};

export type RouteByPathMethod = {
    "/users": {
      GET: {
        layouts: readonly ["/*"];
      };
    };
};

export type AppContext = typeof taser.$Infer.Context;

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;

exports[`manifest codegen and content-hash caching > generates static route manifest with top-level imports and canonical Hono keys 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp, type TaserDefinition } from "@taserjs/runtime";
import layout_0 from "../routes/$.js";
import layout_1 from "../routes/admin/$.js";
import route_0 from "../routes/admin/index.get.js";
import route_1 from "../routes/admin/users.$id.get.js";
import route_2 from "../routes/index.get.js";

export type LayoutTree = {
  "/*": typeof layout_0;
  "/admin/*": typeof layout_1;
};

export const layoutManifest = {
    "/*": layout_0,
    "/admin/*": layout_1,
} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    "/admin": {
      GET: {
        layouts: ["/*", "/admin/*"],
        route: route_0,
      },
    },
    "/admin/users/:id": {
      GET: {
        layouts: ["/*", "/admin/*"],
        route: route_1,
      },
    },
    "/": {
      GET: {
        layouts: ["/*"],
        route: route_2,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;

export const app = createTaserApp(routeManifest);
export default app;
export const createApp = (overrideTaser?: TaserDefinition) =>
  createTaserApp(routeManifest, overrideTaser);

export type RoutePath = "/admin" | "/admin/users/:id" | "/";

export type LayoutHierarchy = {
  "/*": readonly [];
  "/admin/*": readonly ["/*"];
};

export type RouteByPathMethod = {
    "/admin": {
      GET: {
        layouts: readonly ["/*", "/admin/*"];
      };
    };
    "/admin/users/:id": {
      GET: {
        layouts: readonly ["/*", "/admin/*"];
      };
    };
    "/": {
      GET: {
        layouts: readonly ["/*"];
      };
    };
};

export type AppContext = Record<string, unknown>;

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;

exports[`manifest codegen and content-hash caching > handles pathless segment layouts correctly 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp, type TaserDefinition } from "@taserjs/runtime";
import layout_0 from "../routes/_auth.js";
import route_0 from "../routes/_auth/login.post.js";

export type LayoutTree = {
  "/_auth/*": typeof layout_0;
};

export const layoutManifest = {
    "/_auth/*": layout_0,
} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    "/login": {
      POST: {
        layouts: ["/_auth/*"],
        route: route_0,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;

export const app = createTaserApp(routeManifest);
export default app;
export const createApp = (overrideTaser?: TaserDefinition) =>
  createTaserApp(routeManifest, overrideTaser);

export type RoutePath = "/login";

export type LayoutHierarchy = {
  "/_auth/*": readonly [];
};

export type RouteByPathMethod = {
    "/login": {
      POST: {
        layouts: readonly ["/_auth/*"];
      };
    };
};

export type AppContext = Record<string, unknown>;

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;

exports[`manifest codegen and content-hash caching > supports single quote formatting option 1`] = `
"// Generated by @taserjs/cli. Do not edit directly.
import { createTaserApp, type TaserDefinition } from "@taserjs/runtime";
import route_0 from '../routes/index.get.js';

export type LayoutTree = {

};

export const layoutManifest = {

} as const;

export const routeManifest = {
  layouts: layoutManifest,
  routes: {
    '/': {
      GET: {
        layouts: [],
        route: route_0,
      },
    },
  },
} as const;

export type RouteManifest = typeof routeManifest;

export const app = createTaserApp(routeManifest);
export default app;
export const createApp = (overrideTaser?: TaserDefinition) =>
  createTaserApp(routeManifest, overrideTaser);

export type RoutePath = '/';

export type LayoutHierarchy = {

};

export type RouteByPathMethod = {
    '/': {
      GET: {
        layouts: readonly [];
      };
    };
};

export type AppContext = Record<string, unknown>;

declare module "@taserjs/router" {
  interface RouterRegister {
    RoutePath: RoutePath;
    LayoutTree: LayoutTree;
    LayoutHierarchy: LayoutHierarchy;
    RouteByPathMethod: RouteByPathMethod;
    AppContext: AppContext;
  }
}
"
`;
